jira_clone/force-app/main/default/objects/Ticket__c/fields/AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>AssignedTo__c</fullName>
    <description>Assigned to custom user</description>
    <label>Assigned To</label>
    <referenceTo>ProjectMember__c</referenceTo>
    <relationshipLabel>Assigned Tickets</relationshipLabel>
    <relationshipName>AssignedTickets</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>