jira_clone/force-app/main/default/objects/Ticket__c/fields/Creator__c.field-meta.xml
<CustomField>
    <fullName>Creator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Creator custom user</description>
    <label>Creator</label>
    <referenceTo>ProjectMember__c</referenceTo>
    <relationshipLabel>Created Tickets</relationshipLabel>
    <relationshipName>CreatedTickets</relationshipName>
    <type>Lookup</type>
</CustomField>