jira_clone/force-app/main/default/objects/Ticket__c/fields/CurrentState__c.field-meta.xml
<CustomField>
    <fullName>CurrentState__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Current status</description>
    <label>Current State</label>
    <referenceTo>Status__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>