jira_clone/force-app/main/default/objects/Ticket__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Ticket description</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>