jira_clone/force-app/main/default/objects/Ticket__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>Lexicographic ordering key within a sprint or backlog. Assigned by Apex on insert and updated on drag/drop reorder. Sort ASC.</description>
    <label>Score</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>