jira_clone/force-app/main/default/objects/Ticket__c/fields/StoryPoint__c.field-meta.xml
<CustomField>
    <fullName>StoryPoint__c</fullName>
    <description>Story point estimation</description>
    <label>Story Point</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>