jira_clone/force-app/main/default/objects/Ticket__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>Ticket summary</description>
    <label>Summary</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>